# curvaceoia

./: .gitignore  LICENSE  MANIFEST.in  README.md  concat.py  pyproject.toml  setup.cfg
curvaceoia/: __init__.py
curvaceoia/aff/: __init__.py  aff.py  timinggroup.py
curvaceoia/aff/events/: __init__.py  arc.py  camera.py  hold.py  scenecontrol.py  tap.py  timing.py
curvaceoia/aff/lexer/: __init__.py  analyse.py  token.py
curvaceoia/aff/models/: __init__.py  base.py  derived.py
curvaceoia/aff/utils/: __init__.py  coord.py  dffloat.py  easings.py
curvaceoia/songlist/: __init__.py  i18ns.py  lowerid.py  model.py  song.py
curvaceoia/utils/: __init__.py  cfg.py  clsprop.py
