[metadata]

name = curvaceoia
version = 0.1.0
author = IzayoiArika
author_email = 1975516551@qq.com
description = Utils for Arcaea files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IzayoiArika/curvaceoia

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
	Typing :: Typed

[options]
packages = find:
provides_extra = typing
python_requires = >=3.12
install_requires =

[options.package_data]
curvaceoia = *.py